# jackblock-node

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  keystore.json  privateChainSpec.json
.github/ISSUE_TEMPLATE/: config.yml  todo  todo.md
.github/workflows/: build.yml
_POC/winner/: Cargo.toml
_POC/winner/src/: group_by.rs  main.rs
docker/: Dockerfile  docker-compose.devnet.yml  docker-compose.testnet.yml  docker-compose.yml  docker-entrypoint.sh
docker/traefik/dynamic/: dapp.devnet.toml
keys/: local-node-0-aura.json  local-node-1-aura.json  local-node-1-grandpa.json  local-node-1-jack.json
keystores/: local-node-0-jack.json  node-0-grandpa.json  private-key-aura.json  private-key-grandpa.json
modules/interface/: Dockerfile  package.json
modules/interface/src/: App.js  Bets.js  Events.js  Jack.js  JackBets.js  JackEvents.js  NFTs.js
modules/interface/src/config/: types.json
modules/interface/src/mock/: nfts.json
modules/svg-bonanza/: package.json
modules/svg-bonanza/src/pages/api/: README.md  create-erc721-metadata.ts  generate-nft-reward.ts  generate-svg.ts  subkey.ts
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs
pallets/jackblock/: Cargo.toml  types.json
pallets/jackblock/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: Dockerfile
traefik/dynamic/: dapp.toml
