[package]
authors = ['Blocky Blokes']
edition = '2018'
name = 'pallet-jackblock'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-arithmetic = { version = '3.0.0', default-features = false }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119" }
orml-nft = { version = "0.4.0", default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }

[dev-dependencies]
pallet-balances = { version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'sp-runtime/std',
    'orml-nft/std',
    'orml-utilities/std',
]
